Fix track label background and remove scrollbars

--- a/src/styles.css
+++ b/src/styles.css
@@ -3,6 +3,7 @@
   font-size: 16px;
   line-height: 24px;
   font-weight: 400;
+  overflow: hidden;
 
   color: #0f0f0f;
   background-color: #f6f6f6;
@@ -21,17 +22,6 @@
   flex-direction: column;
   justify-content: center;
   text-align: center;
-}
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: 0.75s;
-}
-
-.logo.tauri:hover {
-  filter: drop-shadow(0 0 2em #24c8db);
 }
 
 .row {
